@@ -139,7 +139,7 @@ Zentyal.Dashboard.toggleClose = function () {
 };
 
 Zentyal.Dashboard.closeNotification = function (msg) {
-    $('#notification_container').hide();
+    $('.notification_container').hide();
     $.ajax({
                  url: '/SysInfo/CloseNotification',
                  data: {  message: msg  }
