@@ -1,3 +1,5 @@
+HEAD
+	+ Optionally submit the email while uploading the crash report
 3.5.2
 	+ When doing a login redirect to the full given URI
 	+ Fixed mysql commands executed with wrong parameters or credentials
